tests/paczka1/fuzzy1/31290710.err
Error in line 9: JXN A606 63,8
Error in line 4: A547 A547 55,9
Error in line 18: PCcI0ejK A708 378,3
Error in line 25: PCcI0ejK A606 86,8
Error in line 34: Gige1XB8 A547 63,3
